<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.AddOfficeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/office_building">
    </ImageView>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_property_description"
        android:layout_below="@+id/logo"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16sp">

    </TextView>

    <EditText
        android:id="@+id/txtCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMessage"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/code_placeholder"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCode"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/address_placeholder"
        android:inputType="text"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAddress"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/phone_placeholder"
        android:inputType="phone"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/save_btn">
    </Button>

</RelativeLayout>