<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailHouseActivity"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/propertyImage"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/house_1"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"></TextView>

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_placeholder"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4sp"
                    android:text="@string/phone_placeholder"
                    android:textColor="@color/black"
                    android:textSize="14sp"></TextView>

                <TextView
                    android:id="@+id/txtCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/code_placeholder"
                    android:textAlignment="textStart"
                    android:layout_marginTop="4dp"
                    android:textSize="11sp"></TextView>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:text="@string/rooms_number_placeholder"
                android:textAlignment="textStart"
                android:textSize="12sp"></TextView>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnFile"
        android:layout_above="@+id/btnRent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/file_property_btn">
    </Button>

    <Button
        android:id="@+id/btnRent"
        android:layout_above="@+id/btnRepair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/rent_property_btn">
    </Button>

    <Button
        android:id="@+id/btnRepair"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/repair_garden_btn">
    </Button>

</RelativeLayout>