<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginVertical="6dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/propertyImage"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:src="@drawable/buildings"
                            app:civ_border_width="2dp"
                            app:civ_border_color="@color/black"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_gravity="top">

                        <TextView
                            android:id="@+id/textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">
                        </TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/txtAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                android:text="@string/address_placeholder"
                                android:textColor="@color/black">
                            </TextView>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/txtPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textSize="14sp"
                            android:text="@string/phone_placeholder"
                            android:textColor="@color/black">
                        </TextView>

                        <TextView
                            android:id="@+id/txtCode"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:layout_marginTop="4dp"
                            android:textAlignment="textStart"
                            android:text="@string/code_placeholder">
                        </TextView>

                    </LinearLayout>




                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>